# DCCS

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
cmake/: FindCAENHVWrapper.cmake
documentation/: documentation.md
licenses/: CAEN-HV-Wrapper-Library-License.txt
source/: main.cpp
source/gui/: CMakeLists.txt  ChannelWidget.cpp  ChannelWidget.hpp  CollectionModel.cpp  CollectionModel.hpp  ControlPanelWidget.cpp  ControlPanelWidget.hpp  DCCHController.cpp  DCCHController.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowAlt.hpp  TestController.cpp  TestController.hpp  TestInfo.hpp  TestStatusWidget.cpp  TestStatusWidget.hpp
source/psu/: CMakeLists.txt  HVInterface.cpp  HVInterface.hpp  PSUController.cpp  PSUController.hpp  Port.hpp  channel.cpp  channel.hpp  com_port_struct.hpp  hv_channel_interface.hpp  hv_interface.cpp  hv_interface.hpp  psu.cpp  psu.hpp
source/psu/FakeHV/: CMakeLists.txt  FakeHVLibrary.c  FakeHVLibrary.h  main.c
source/test/manual/: CMakeLists.txt  test.cpp  test.hpp
test/channel-parameters/: CMakeLists.txt  main.cpp
test/channel-parameters/cmake/: FindCAENHVWrapper.cmake
test/check-development-environment/: CMakeLists.txt  vcpkg.json
test/check-development-environment/source/: main.cpp
